log
Fri 21 Apr 2023 06:49:02 PM UTC: 
 tests:  1|8
total_score: 0/70
82e2da6
Fri 21 Apr 2023 07:06:51 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b690017
Fri 21 Apr 2023 07:22:17 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|7
total_score: 5/70
136fd59
Fri 21 Apr 2023 07:26:31 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
47dec43
Fri 21 Apr 2023 07:29:35 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1183945
Fri 21 Apr 2023 07:30:40 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:101:1: error: control reaches end of non-void function [-Werror=return-type]
  101 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4c91c42
Fri 21 Apr 2023 07:32:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:101:1: error: control reaches end of non-void function [-Werror=return-type]
  101 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2754106
Fri 21 Apr 2023 07:32:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
15b723a
Fri 21 Apr 2023 07:34:56 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
94d3bbd
Fri 21 Apr 2023 07:35:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
d8111bd
Fri 21 Apr 2023 07:36:52 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  13|5
total_score: 15/70
482de66
Sat 22 Apr 2023 12:32:26 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  13|5
total_score: 15/70
ece411e
Sat 22 Apr 2023 12:40:02 AM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:13: error: variable ‘padre’ set but not used [-Werror=unused-but-set-variable]
   63 |   TreeNode *padre = NULL;
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e6d9c08
Sat 22 Apr 2023 01:09:57 AM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
588d2d0
Sat 22 Apr 2023 01:11:26 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
1849381
Sat 22 Apr 2023 02:40:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
e04a13e
Sat 22 Apr 2023 02:54:50 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
cec9949
Sat 22 Apr 2023 03:22:07 AM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
ad7712e
Sat 22 Apr 2023 03:42:16 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
 tests:  18|3
total_score: 35/70
b00d5ef
Sat 22 Apr 2023 05:24:52 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 45/70
90a7397
Sat 22 Apr 2023 06:07:37 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:152:14: error: ‘TreeMap’ has no member named ‘is’
  152 |       if(tree->is)
      |              ^~
treemap.c:153:5: error: expected expression before ‘}’ token
  153 |     }
      |     ^
treemap.c:149:13: error: unused variable ‘auxBuscado’ [-Werror=unused-variable]
  149 |   TreeNode *auxBuscado = NULL;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ad444f3
Sat 22 Apr 2023 06:30:22 PM UTC: 
 treemap.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:160:1: error: control reaches end of non-void function [-Werror=return-type]
  160 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ae0f33a
